Add cors configuration